# cuCBET

./: .gitignore  Beam.cuh  CMakeLists.txt  Calculations.cuh  Egrid.cuh  Gpu_utils.cuh  Initializers.cuh  Interpolator.cuh  Intersections.cuh  Makefile  README.md  Ray.cuh  beamnorms.csv  cbet.ipynb  constants.cuh  copy_outputs  cuPlot.py  file_io.cuh  main.cu  run_test  scratch.ipynb  scratch.py  vec2.cuh
extras/: cbet.ipynb  initial.txt
include/: array.cuh  beam2d.cuh  cbet_calculations.cuh  error.cuh  gradients.cuh  interp2d.cuh  parameters.cuh  ray2d.cuh  smart_pointer.cuh  timing.cuh  utilities.cuh  vector2.cuh
src/: Beam.cuh  Calculations.cuh  Egrid.cuh  Gpu_utils.cuh  Interpolator.cuh  Intersections.cuh  NeuralNet.cuh  Ray.cuh  a.out  constants.cuh  file_io.cuh  main.cu  vec2.cuh
src/Beams/: Beam2D.cuh  Beam_Kernels.cuh  Beams.cuh  Beams2D.cuh  Beams3D.cuh  Bezier.cuh  CBET_Calculations.cuh  Ray2D.cuh  Rays.cuh  Rays2D.cuh  Rays3D.cuh
src/Interpolation/: Gradients.cuh  Interp2D.cuh  Interpolator.cuh
src/Parameters/: Parameters.cuh
src/Tests/: test_BesterMatrix.cuh  test_Vector2.cuh  test_Vector3.cuh
src/Utilities/: BestMatrix.cuh  BesterMatrix.cuh  Defines.cuh  EnumTypes.cuh  PolicyManagers.cuh  Timing.cuh  Utilities.cuh  Vector.cuh  Vector2.cuh  Vector3.cuh
